test multiple photos passed in swagger
